all tests running nicely